--- a/brickleedit/src/gui/resources/resource.qrc
+++ b/brickleedit/src/gui/resources/resource.qrc
@@ -17,5 +17,6 @@
         <file>icons/pickAsBrush.png</file>
         <file>icons/erase.png</file>
         <file>icons/deselect.png</file>
+        <file>icons/eyeOpen.png</file>
     </qresource>
 </RCC>
