--- a/brickleedit/src/gui/scenetree/scenetreedock.ui
+++ b/brickleedit/src/gui/scenetree/scenetreedock.ui
@@ -99,7 +99,7 @@
            <bool>true</bool>
           </property>
           <property name="columnCount">
-           <number>2</number>
+           <number>3</number>
           </property>
           <column>
            <property name="text">
@@ -109,6 +109,11 @@
           <column>
            <property name="text">
             <string>Visible</string>
+           </property>
+          </column>
+          <column>
+           <property name="text">
+            <string>Lock</string>
            </property>
           </column>
          </widget>
